# mcp_server_trending

./: .env.example  CI_FIX.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL_SUCCESS.md  NEW_PLATFORMS_SUMMARY.md  PACKAGE_REFACTOR.md  PHASE_2_3_IMPLEMENTATION.md  PRD.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REDDIT_SMART_QUERY.md  RUFF_SETUP.md  SMITHERY_INFO.md  SMITHERY_PUBLISHING.md  TEST_REPORT.md  deploy.sh  install.sh  pyproject.toml  smithery.json  smithery.yaml  test_new_platforms.py
.cursor/rules/: development.mdc
.github/workflows/: ci.yml  release.yml
docs/: CACHE_OPTIMIZATION_SUMMARY.md  PAPER_CACHE_OPTIMIZATION.md  REMOTEOK_GUIDE.md  SEMANTICSCHOLAR_RATE_LIMIT.md  SMITHERY_PUBLISHING.md
examples/: basic_usage.py
src/: __init__.py  server.py
src/fetchers/: base.py
src/fetchers/github/: fetcher.py
src/fetchers/hackernews/: fetcher.py
src/fetchers/producthunt/: fetcher.py
src/mcp_server_trending/: config.py  server.py
src/mcp_server_trending/fetchers/: __init__.py
src/models/: base.py
src/utils/: cache.py  http_client.py  logger.py
tests/: conftest.py  run_all_new_tests.py  run_new_tests.py  run_paper_tests.py  test_all_tools.py  test_alternativeto.py  test_arxiv.py  test_awesome.py  test_betalist.py  test_cache.py  test_cherry_studio.py  test_chrome.py  test_comprehensive.py  test_devto.py  test_echojs.py  test_github.py  test_hackernews.py  test_hashnode.py  test_huggingface.py  test_indiehackers.py  test_integration.py  test_juejin.py  test_lobsters.py  test_medium.py  test_models.py  test_modelscope.py  test_new_features.py  test_npm.py  test_openreview.py  test_paperswithcode.py  test_producthunt.py  test_pypi.py  test_reddit.py  test_reddit_logic.py  test_replicate.py  test_semanticscholar.py  test_server_setup.py  test_stackoverflow.py  test_v2ex.py  test_vscode.py  (+3 more)
(+27 files in other folders)
