[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-trending"
version = "0.1.0"
description = "MCP Server for trending data from multiple platforms for indie developers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MCP Server Trending Team"}
]
keywords = ["mcp", "trending", "github", "hackernews", "producthunt", "indie-hackers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-server-trending = "server:cli_main"

[project.urls]
Homepage = "https://github.com/yourusername/mcp_server_trending"
Documentation = "https://github.com/yourusername/mcp_server_trending#readme"
Repository = "https://github.com/yourusername/mcp_server_trending"
Issues = "https://github.com/yourusername/mcp_server_trending/issues"

[tool.setuptools]
py-modules = ["server", "config"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["models*", "fetchers*", "utils*", "tools*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
